# ffpiv

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-test-pypi.yml  tests.yml
ffpiv/: __init__.py  api.py  pnb.py  pnp.py  window.py
pivnumba/: __init__.py  api.py  jitfuncs.py  nb.py  np.py  window.py
tests/: conftest.py  test_api.py  test_fft.py  test_window.py
